@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-20T08:18:34Z",
+  "timestamp" : "2022-11-21T01:20:48Z",
   "count_outdated" : 453,
   "uniques_outdated" : 250,
-  "count" : 469,
+  "count" : 470,
   "uniques" : 259,
   "clones" : [
     {
@@ -56,8 +56,8 @@
     },
     {
       "timestamp": "2022-11-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
